# joyBotApp

./: pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native_add.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/home_screen/: home_screen.dart
lib/home_screen/joystick/: joys_tick_custom.dart
lib/home_screen/loading/: loading_app.dart
lib/home_screen/show_dialog_title/: show_dialog_title.dart
lib/home_screen/slider_circle/: cirle.dart  controll_circle.dart  custom_cirle.dart  custom_slider.dart
lib/native_screen/: data_joytich.dart  native_add.dart  native_screen.dart  procesimage.dart  rectan_face.dart
lib/native_screen/painter/: face_detector_painter.dart
lib/screen_block/: sreen_block.dart
lib/screen_block/block/: block.dart  types_block.dart
lib/screen_block/design_block/: start_decoration.dart
lib/screen_block/design_block/dkcd/: dkdcl_decoration.dart  dkdct_decoration.dart  dkdcx90_decoration.dart  dkdcx90t_decoration.dart  dkdcxt_decoration.dart
lib/screen_block/design_block/dkct/: dk_servo_1_decoration.dart  dk_servo_2_decoration.dart  dk_servo_3_decoration.dart  dkct_bat_tay_decoration.dart  dkct_decoration.dart  (+3 more)
lib/screen_block/list_box/: list_box.dart
lib/screen_block/paint/: circle_paint.dart  path_paint_lui.dart  path_paint_tien.dart  path_paint_xoay_phai.dart  path_paint_xoay_trai.dart
lib/screen_block/vi_tri_block/: vi_tri_block.dart
